--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -3,6 +3,26 @@ body {
   margin-top: 4em;
 }
 
+.wins {
+  font-family: century gothic,arial,sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #F0EDF2;
+}
+
+.table {
+  background-color: #f0edf2;
+}
+
+.table > tbody > tr:nth-child(even) {
+  background-color: #E1E1EB;
+}
+
+.table > thead {
+  background-color: #C6CBDD;
+}
+
 .lvl {
   width: 120px;
   height: 120px;
@@ -11,11 +31,26 @@ body {
   position: relative;
 }
 
+.icon {
+  height: 120px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.icon > img {
+  height: 90px;
+  margin-bottom: 5px;
+}
+
 .lvl > .num {
   top: 60px;
   position: relative;
-  line-height: 28px;
+  line-height: 8px;
   vertical-align: middle;
+  color: #F0EDF2;
+  font-family: Arial, sans-serif;
+  font-size: 1.2em;
+  letter-spacing: 1px;
 }
 
 .lvl ~ h1 {
